--- a/server/d1/vine_comment/templates/comments/base.html
+++ b/server/d1/vine_comment/templates/comments/base.html
@@ -25,18 +25,11 @@
 
 <body style="padding:5px;">
 
-<script>
-	function onComment(e) {
-		var badge = $('#count');
-		var count = parseInt(badge.html())+1;
-		badge.html(count);
-	}
-</script>
 <div id="commentBoard">
 	<div id="boardRight" >
 		<ul class="nav nav-pills" class="panel panel-default">
 		  <li id="nav_comment" class="{% active request "comment" %}" title="{{ index_url }}"><a href="#">
-		  <span class="badge pull-right" id="count">{{ p_comment.paginator.count }}</span> 口水</a> </li>
+		  <span class="badge pull-right" id="comments_count">{{ p_comment.paginator.count }}</span> 口水</a> </li>
 		  <!-- <li id="nav_account" class="{% active request "account" %}"><a href="#"><span class="badge pull-right">2</span> 账户</a></li>
 		  <li id="nav_letter" class="{% active request "letter" %}"><a href="#"><span class="badge pull-right">33</span> 信封</a></li>
 		  <li id="nav_setting" class="{% active request "setting" %}"><a href="#"> 设置</a></li> -->
