enable basic downs

--- a/server/d1/vine_comment/templates/comments/comment_view_raw.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_raw.html
@@ -10,14 +10,23 @@
           $.get("/ajax/up/comment/"+id)
             .done(function(){
                 popup_message("up +1");
-                var ups = $('#up_comment_'+id).find('i');
+                var ups = $('#up_comment_'+id).find('span');
                 var count = parseInt(ups.text())+1;
                 ups.text(count);
             });
         };
+        function down(id) {
+          $.get("/ajax/down/comment/"+id)
+            .done(function(){
+                popup_message("down +1");
+                var downs = $('#down_comment_'+id).find('span');
+                var count = parseInt(downs.text())+1;
+                downs.text(count);
+            });
+        };
       </script>
-			<a href="#" id="up_comment_{{message.id}}"><i class="fa fa-thumbs-o-up" style="cursor:pointer" onclick="up('{{message.id}}')">{{ message.up_users|length }}</i></a>
-					<a href="#"><i class="fa fa-thumbs-down fa-flip-horizontal"></i></a>{{ message.down_users|length }}
+			<a href="#" id="up_comment_{{message.id}}"><i class="fa fa-thumbs-o-up" onclick="up('{{message.id}}')"></i><span> {{ message.up_users|length }}</span></a>
+					<a href="#" id="down_comment_{{message.id}}"><i class="fa fa-thumbs-down fa-flip-horizontal" onclick="down('{{message.id}}')"></i><span> {{ message.down_users|length }}</span></a>
      </span>
      <strong>{% if message.user %}{{ message.user }}{% else %}{{ message.auther_ip }}{% endif %}</strong>
      <span id='comment_time'> {{ message.time_added|naturaltime }}</span> {{message.comment_str}} <br>
