when you have downed the comment, click up will move the down

--- a/server/d1/vine_comment/templates/comments/comment_view_raw.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_raw.html
@@ -8,12 +8,21 @@
       <script type="text/javascript">
         function up(id) {
           $.get("/ajax/up/comment/"+id)
-            .done(function(){
-                popup_message("up +1");
-                var ups = $('#up_comment_'+id).find('span');
-                var count = parseInt(ups.text())+1;
-                ups.text(count);
-            });
+            .done(function(data){
+                if (data == "duplicated") {
+                    popup_message("You can only up once :)");
+                } else if (data == "+1") {
+                    popup_message("up+1");
+                    var ups = $('#up_comment_'+id).find('span');
+                    var count = parseInt(ups.text())+1;
+                    ups.text(count);
+                } else if (data == "down-1") {
+                    popup_message("down-1");
+                    var downs = $('#down_comment_'+id).find('span');
+                    var count = parseInt(downs.text())-1;
+                    downs.text(count);
+                }
+              });
         };
         function down(id) {
           $.get("/ajax/down/comment/"+id)
