add last 7 days' hotest comments list function

--- a/server/d1/vine_comment/templates/home.html
+++ b/server/d1/vine_comment/templates/home.html
@@ -15,13 +15,19 @@ $(document).ready(function(){
 	$.support.cors = true;
 	$('#vine_comment_iframe').load("/iframe/" + btoa(document.location));
 });
+function WeekHot() {
+  $.get("/home/weekhot/")
+   .done(function(data){
+        $('#showMsg').html(data);
+       });
+};
 </script>
 </head>
 
 <body>
 	<h1>Vine Comments</h1>
   <button class="btn btn-primary">今日最热</button>
-  <button class="btn btn-primary">周最热</button>
+  <button class="btn btn-primary" onclick="WeekHot()">周最热</button>
   <button class="btn btn-primary">月最热</button>
 	<div id="showMsg">
     {% include 'comments_list.html' %}
