--- a/server/d1/vine_comment/templates/comments_hot.html
+++ b/server/d1/vine_comment/templates/comments_hot.html
@@ -82,7 +82,7 @@
 						-<span>{{ message.down_users|length }}</span>
 					</a>
 				 </span>
-				 <strong>{% if message.user %}{{ message.user }}{% else %}{{ message.auther_ip }}{% endif %}</strong>
+				 <strong>{% if message.user %}{{ message.user }}{% else %}{{ message.author_ip }}{% endif %}</strong>
 				 <span id='comment_time'> {{ message.time_added|naturaltime }}</span> {{message.comment_str}} <br>
 		     <span> {{message.comment_board.title}} </span>
 			</li>
