move embedded up/down js to a single file

--- a/server/d1/vine_comment/templates/comments_hot.html
+++ b/server/d1/vine_comment/templates/comments_hot.html
@@ -1,65 +1,7 @@
 {% load humanize %}
 {% load staticfiles %}
 <script src="{% static 'jquery/2.0.3/jquery.min.js' %}"></script>
-
-		<script type="text/javascript">
-		function up(id) {
-		 $.get("/ajax/up/comment/"+id)
-			 .done(function(data){
-					if (data == "duplicated") {
-							popup_message("You can only up once :)");
-					} else if (data == "up+1") {
-							popup_message(data);
-							var ups = $('#up_comment_'+id).find('span');
-							var count = parseInt(ups.text())+1;
-							ups.text(count);
-							var up_icon = $('#up_comment_'+id).find('i');
-							up_icon.prop('class', "fa fa-thumbs-up");
-					} else if (data == "down-1,up+1") {
-							popup_message(data);
-							var downs = $('#down_comment_'+id).find('span');
-							var count = parseInt(downs.text())-1;
-							downs.text(count);
-							var down_icon = $('#down_comment_'+id).find('i');
-							down_icon.prop('class', "fa fa-thumbs-o-down fa-flip-horizontal");
-
-							var ups = $('#up_comment_'+id).find('span');
-							var count = parseInt(ups.text())+1;
-							ups.text(count);
-							var up_icon = $('#up_comment_'+id).find('i');
-							up_icon.prop('class', "fa fa-thumbs-up");
-					}
-			 });
-		};
-		function down(id) {
-			$.get("/ajax/down/comment/"+id)
-			 .done(function(data){
-					if (data == "duplicated") {
-							popup_message("You can only down once :)");
-					} else if (data == "down+1") {
-							popup_message(data);
-							var downs = $('#down_comment_'+id).find('span');
-							var count = parseInt(downs.text())+1;
-							downs.text(count);
-							var down_icon = $('#down_comment_'+id).find('i');
-							down_icon.prop('class', "fa fa-thumbs-down fa-flip-horizontal");
-					} else if (data == "up-1,down+1") {
-							popup_message(data);
-							var ups = $('#up_comment_'+id).find('span');
-							var count = parseInt(ups.text())-1;
-							ups.text(count);
-							var up_icon = $('#up_comment_'+id).find('i');
-							up_icon.prop('class', "fa fa-thumbs-o-up");
-
-							var downs = $('#down_comment_'+id).find('span');
-							var count = parseInt(downs.text())+1;
-							downs.text(count);
-							var down_icon = $('#down_comment_'+id).find('i');
-							down_icon.prop('class', "fa fa-thumbs-down fa-flip-horizontal");
-					}
-			 });
-		};
-		</script>
+<script src="{% static 'js/comment_updown.js' %}"></script>
 
 		<ul class="list-group">
 		{% for message in p_comment.object_list %}
