--- a/server/d1/vine_comment/templates/home.html
+++ b/server/d1/vine_comment/templates/home.html
@@ -21,6 +21,14 @@ $(document).ready(function(){
 	$.support.cors = true;
 	$('#vine_comment_iframe').load("/iframe/" + btoa(document.location));
 });
+function Newest(me) {
+  $('.get_hotest').prop('class',"btn btn-primary get_hotest");
+  $(me).prop('class',"btn btn-success get_hotest");
+  $.get("/home/list")
+   .done(function(data){
+        $('#showMsg').html(data);
+       });
+};
 function DayHot(me) {
   $('.get_hotest').prop('class',"btn btn-primary get_hotest");
   $(me).prop('class',"btn btn-success get_hotest");
@@ -50,6 +58,7 @@ function MonthHot(me) {
 
 <body style="margin-top:10px;width:90%;margin-left:5%">
 	<h1>Vine Comments</h1>
+  <button class="btn btn-success get_hotest" onclick="Newest(this)">最新</button>
   <button class="btn btn-primary get_hotest" onclick="DayHot(this)">今日最热</button>
   <button class="btn btn-primary get_hotest" onclick="WeekHot(this)">7天最热</button>
   <button class="btn btn-primary get_hotest" onclick="MonthHot(this)">30天最热</button>
