--- a/server/d1/vine_comment/templates/search/search.html
+++ b/server/d1/vine_comment/templates/search/search.html
@@ -19,7 +19,7 @@
 
             {% for result in page.object_list %}
                 <p>
-                    <a href="{{ result.object.get_absolute_url }}">{{ result.object.comment_str }}</a>
+                    <a href="{{ result.object.get_absolute_url }}">{{ result.object.comment_board.title }}: {{ result.object.comment_str }}</a>
                 </p>
             {% empty %}
                 <p>No results found.</p>
