template: load static file first. add related fields to search documnent

--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <html>
 <head>
 <link rel="stylesheet" href="{% static 'test/comment_styles.css' %}" type="text/css" media="all" />
