--- a/server/d1/vine_comment/templates/comments_newest.html
+++ b/server/d1/vine_comment/templates/comments_newest.html
@@ -37,7 +37,7 @@
 		<script type="text/javascript">
 			var l = document.location;
 			$('#pagination_arrow_{{ p_comment.previous_page_number }}').on('click', function() {
-				$('#showMsg').load('/home/list?page={{ p_comment.previous_page_number }}');
+				$('#showMsg').load('/home/newest?page={{ p_comment.previous_page_number }}');
 			});
 		</script>
 		{% endif %}
@@ -48,7 +48,7 @@
 				<li id='pagination_{{num}}'><a href="#">{{ num }}</a></li>
 				<script type="text/javascript">
 					$('#pagination_{{num}}').on('click', function() {
-						$('#showMsg').load('/home/list?page={{ num }}');
+						$('#showMsg').load('/home/newest?page={{ num }}');
 					});
 				</script>
 
@@ -58,7 +58,7 @@
 		<li id='pagination_arrow_{{ p_comment.next_page_number }}'><a href="#">»</a></li>
 		<script type="text/javascript">
 			$('#pagination_arrow_{{ p_comment.next_page_number }}').on('click', function() {
-				$('#showMsg').load('/home/list?page={{ p_comment.next_page_number }}');
+				$('#showMsg').load('/home/newest?page={{ p_comment.next_page_number }}');
 			});
 		</script>
 		{% endif %}
