template: remove bases useless code

--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<link rel="stylesheet" href="{% static 'test/comment_styles.css' %}" type="text/css" media="all" />
+<link href="{% static 'test/comment_styles.css' %}" rel="stylesheet">
 <link href="{% static 'font-awesome/4.0.3/css/font-awesome.min.css' %}" rel="stylesheet">
 <link href="{% static 'twitter-bootstrap/3.0.3/css/bootstrap.min.css' %}" rel="stylesheet>
 {% block head %}
