--- a/server/d1/vine_comment/templates/search/search.html
+++ b/server/d1/vine_comment/templates/search/search.html
@@ -1,38 +1,40 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
+<div class="row">
   <h2>Search</h2>
-
-  <form method="get" action=".">
-    <table>
-      {{ form.as_table }}
-      <tr>
-        <td>
-          <input type="submit" value="Search">
-        </td>
-      </tr>
-    </table>
-
-    {% if query %}
-      <h3>Results</h3>
-
-      {% for result in page.object_list %}
-        <p>
-          {{ result.object.comment_board.title }}: <a href="{{ result.object.get_absolute_url }}">{{ result.object.comment_str }}</a>
-        </p>
-      {% empty %}
-        <p>No results found.</p>
-      {% endfor %}
-
-      {% if page.has_previous or page.has_next %}
-        <div>
-          {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
-          |
-          {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
-        </div>
-      {% endif %}
-    {% else %}
-      {# Show some example queries to run, maybe query syntax, something else? #}
-    {% endif %}
+  <form class="form-horizontal" role="form" method="get" action=".">
+    <div class="col-md-6 ">
+    {{ form|crispy }}
+    </div>
+    <div class="form-group">
+      <button type="submit" class="btn btn-default">Search</button>
+    </div>
   </form>
+</div>
+
+{% if query %}
+<div>
+  <h3>Results</h3>
+
+  {% for result in page.object_list %}
+    <p>
+      {{ result.object.comment_board.title }}: <a href="{{ result.object.get_absolute_url }}">{{ result.object.comment_str }}</a>
+    </p>
+  {% empty %}
+    <p>No results found.</p>
+  {% endfor %}
+
+  {% if page.has_previous or page.has_next %}
+    <div>
+      {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
+      |
+      {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
+    </div>
+  {% endif %}
+</div>
+{% else %}
+  {# Show some example queries to run, maybe query syntax, something else? #}
+{% endif %}
 {% endblock %}
