--- a/server/d1/vine_comment/templates/search/search.html
+++ b/server/d1/vine_comment/templates/search/search.html
@@ -4,11 +4,11 @@
 {% block content %}
 <div class="row">
   <h2>Search</h2>
-  <form class="form-horizontal" role="form" method="get" action=".">
-    <div class="col-md-6 ">
+  <form class="col-md-6 form" role="form" method="get" action=".">
+    <div>
     {{ form|crispy }}
     </div>
-    <div class="form-group">
+    <div class="form-group ">
       <button type="submit" class="btn btn-default">Search</button>
     </div>
   </form>
