template: refine structure of home

--- a/server/d1/vine_comment/templates/search/search.html
+++ b/server/d1/vine_comment/templates/search/search.html
@@ -15,8 +15,8 @@
 </div>
 
 {% if query %}
-<div>
-  <h3>Results</h3>
+<div class="row">
+  <h2>Results</h2>
 
   {% for result in page.object_list %}
     <p>
