--- a/server/d1/vine_comment/templates/home.html
+++ b/server/d1/vine_comment/templates/home.html
@@ -39,7 +39,7 @@
         <div class="form-group">
           <input id="search-input" type="text" name="q" class="form-control" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default" onclick="Search(this)"><span class="glyphicon glyphicon-search"></span></button>
+        <a href="#" onclick="Search(this)"><span class="glyphicon glyphicon-search"></span></a>
       </form>
       <ul class="nav navbar-nav navbar-right">
         {% include 'auth/auth_all__li.html' %}
@@ -92,7 +92,7 @@ function MonthHot(me) {
        });
 };
 function Search(me) {
-  $.get("/search/?q=" + $('#search-input').text())
+  $.get("/search/?q=" + document.getElementById('search-input').value)
   .done(function(data) {
     $('#showMsg').html(data);
   });
